refactor(common-spring): changed reduce operations